<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_background_color_gray" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="350dip"
        android:background="@drawable/tea_zhongchou_bg" >

        <ImageView
            android:id="@+id/pool"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/bottom_tab"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/app_name" />
        <TextView
            android:layout_margin="5dp"
            android:id="@+id/total_money_tv_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="众筹总金额(茶币):"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
        <TextView
            android:layout_margin="5dp"
            android:id="@+id/total_money_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/total_money_tv_text"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
	<TextView
             android:layout_below="@id/total_money_tv"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/earned_money_tv_text"
            android:gravity="center"
            android:text="上期利润(元):"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
        <TextView
            android:layout_below="@id/total_money_tv"
            android:layout_toRightOf="@id/earned_money_tv_text"
            android:layout_margin="5dp"
            android:id="@+id/earned_money_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
         
        
        
        <LinearLayout
            android:id="@+id/bottom_tab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:paddingBottom="10dip"
            android:paddingTop="10dip" >

            <TextView
                android:id="@+id/my_zhongchou"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/my_crowdfunding"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/total_zhongchou"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/crowdfunding_total_nu"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/my_shouyi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/my_participation"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/left_bg"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/pool" >

            <ImageButton
                android:id="@+id/left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/left"
                android:contentDescription="@string/app_name" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/right_bg"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/pool" >

            <ImageButton
                android:id="@+id/right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/right"
                android:contentDescription="@string/app_name" />
        </RelativeLayout>
    </RelativeLayout>

    <TextView
        android:layout_below="@+id/relativeLayout1"
        android:id="@+id/roule_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:padding="10dip"
        android:text="规则：用户可使用茶币购买茶信股份，定期获得分红。每年实行季度返现金分红。"
        android:textColor="@color/theme_zhongchou_text_color"
        android:textSize="14sp" />

    <Button
        android:id="@+id/crowdfunding_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:background="@drawable/tea_cishan_long_bt_orange"
        android:text="我要投"
        android:textColor="@color/white"
        android:textSize="15sp" />

</RelativeLayout>